[gd_scene load_steps=4 format=2]

[ext_resource path="res://API/Addon.gd" type="Script" id=1]
[ext_resource path="res://images/help.png" type="Texture" id=2]
[ext_resource path="res://images/help_hover.png" type="Texture" id=3]

[node name="Addon" type="Node2D" index="0"]

position = Vector2( 155.239, 209.691 )
scale = Vector2( 4.61754, 6.46875 )
script = ExtResource( 1 )
_sections_unfolded = [ "Hint", "Rect", "Textures" ]

[node name="info" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = -28.0
margin_right = 618.0
margin_bottom = 572.0
rect_scale = Vector2( 0.015, 0.01 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="img" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -26.0
margin_top = -18.0
margin_right = 65.0
margin_bottom = 2.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Open Image"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="path" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -8.0
margin_top = -18.0
margin_right = 32.0
margin_bottom = -4.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="FileDialog" type="FileDialog" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -28.0
margin_top = -25.0
margin_right = 255.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Save a File"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 4
access = 0
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "res://"
current_file = ""
current_path = "res://"
_sections_unfolded = [ "Rect" ]

[node name="info2" type="Panel" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -28.0
margin_top = -27.0
margin_right = 27.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="app" type="Button" parent="info2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 44.0
margin_right = 111.0
margin_bottom = 64.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Go to TrashTag"
flat = false
align = 1

[node name="close" type="Button" parent="info2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 44.0
margin_right = 85.0
margin_bottom = 64.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Close"
flat = false
align = 1

[node name="Label" type="Label" parent="info2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 2.0
margin_right = 210.0
margin_bottom = 203.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Reuse: 
	You could reuse your coffee cup
	by turning it into a pencil case
	
Reduce:
	You could use a reusable coffee
	cup.
	
Recycle:
	you can recycle the lid of your 
	coffee cup at your nearest 
	recycling centre"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="info" to="." method="_on_info_pressed"]

[connection signal="pressed" from="img" to="." method="_on_img_pressed"]

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]

[connection signal="pressed" from="info2/app" to="." method="_on_app_pressed"]

[connection signal="pressed" from="info2/close" to="." method="_on_close_pressed"]


